feat: WooCommerce Integration & UI Improvements
- WooCommerce REST API integration for automatic order sync
- Payment management with deposit/balance options for guitar orders
- Extra costs functionality with WooCommerce sync
- Enhanced order detail UI with prominent final amount display
- Mobile-optimized customer and procurement views
- VAT calculation and payment status tracking
- Improved UX with edit/save flows and conditional displays

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ npm-debug.log*
 yarn-error.log*
 .vercel/
 .DS_Store
+
+#Woocommerce Api
+WC_BASE_URL=der-trashcontainer.de
+WC_CONSUMER_KEY=ck_e4b6810f5f368f51ddebaf645e6a3a620d483736
+WC_CONSUMER_SECRET=cs_cs_acb121343b73893fa62329a99b016824ec19d13d
