--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "db:seed": "tsx prisma/seed.ts",
     "smoke": "ts-node scripts/smoke.ts",
     "imap:check": "tsx scripts/imap-check.ts",
-    "mail:sync": "tsx scripts/manual-sync.ts"
+    "mail:sync": "tsx scripts/manual-sync.ts",
+    "mail:sync-worker": "tsx scripts/sync-worker.ts"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.13.0",
+    "@types/better-sqlite3": "^7.6.13",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
@@ -28,6 +30,7 @@
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -41,7 +44,7 @@
     "@types/mailparser": "^3.4.6",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20.19.10",
-    "@types/nodemailer": "^7.0.3",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
