--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "db:reset": "prisma migrate reset --force --skip-generate --skip-seed && prisma generate && tsx prisma/seed.ts",
     "db:seed": "tsx prisma/seed.ts",
     "smoke": "ts-node scripts/smoke.ts",
@@ -34,6 +35,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "@vercel/blob": "^0.25.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
