chore: Optimize for Vercel deployment and improve PWA config
- Add vercel.json with explicit Prisma generate step
- Add prisma:generate script to package.json
- Fix PWA manifest.json: correct start_url and icon paths
- Improve app/layout.tsx: add iOS PWA meta tags and fix manifest link
- Update .gitignore: ignore test files and generated PWA files
- Add explicit NEXTAUTH_SECRET to auth config for Vercel compatibility
- All changes maintain backward compatibility and don't break existing functionality

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
+    "prisma:generate": "prisma generate",
     "db:reset": "prisma migrate reset --force --skip-generate --skip-seed && prisma generate && tsx prisma/seed.ts",
     "db:seed": "tsx prisma/seed.ts",
     "smoke": "ts-node scripts/smoke.ts",
